--- a/style.css
+++ b/style.css
@@ -1,10 +1,11 @@
 body {
-  margin: 0;
-  padding: 0;
   overflow: hidden;
 }
 
 .clock {
-  width: 100vw;
-  height: 100vh;
+  position: fixed;
+  top: calc((100vh - 100vmin) / 2);
+  left: calc((100vw - 100vmin) / 2);
+  width: 100vmin;
+  height: 100vmin;
 }
