--- a/style.css
+++ b/style.css
@@ -42,6 +42,13 @@ body {
   font-family: sans-serif;
 }
 
-.hand {
-  stroke-width: 1vmin;
+.hand line {
+  stroke-width: 2.5vmin;
+}
+
+.hand text {
+  fill: white;
+  font-family: sans-serif;
+  font-size: 2vmin;
+  alignment-baseline: central;
 }
