--- a/style.css
+++ b/style.css
@@ -1,6 +1,6 @@
 body {
   overflow: hidden;
-  background: white;
+  background: #eee;
 }
 
 .clock {
@@ -15,26 +15,19 @@ body {
   transform: translate(50vmin, 50vmin);
 }
 
-.circle {
-  fill: black;
-  stroke: black;
-  cx: 0;
-  cy: 0;
-}
-
 .quarter-hour-tick {
-  stroke: white;
+  stroke: black;
   stroke-width: 0.3vmin;
 }
 
 .hour-tick {
-  stroke: white;
+  stroke: black;
   stroke-width: 1vmin;
   stroke-linecap: round;
 }
 
 .hour-text {
-  fill: white;
+  fill: black;
   text-anchor: middle;
   alignment-baseline: central;
   font-size: 5vmin;
@@ -42,12 +35,13 @@ body {
 }
 
 .hand line {
-  stroke-width: 2.5vmin;
+  stroke-width: 2.3vmin;
 }
 
 .hand text {
   fill: white;
   font-family: sans-serif;
-  font-size: 2vmin;
+  font-size: 1.7vmin;
   alignment-baseline: central;
+  text-anchor: middle;
 }
