--- a/style.css
+++ b/style.css
@@ -47,15 +47,16 @@ body {
   text-anchor: middle;
 }
 
-.dateline line {
+line.dateline, .dateline line {
   stroke: black;
-  stroke-width: 0.3vmin;
+  stroke-width: 0.1vmin;
 }
 
-.dateline text {
+text.dateline, .dateline text {
   fill: black;
   font-family: sans-serif;
   font-size: 1.7vmin;
   alignment-baseline: central;
   text-anchor: middle;
+  font-weight: bold;
 }
